--- a/Backend.File.Test2/MainWindow.xaml
+++ b/Backend.File.Test2/MainWindow.xaml
@@ -7,6 +7,19 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="download" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10 5" Click="Button_Click"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="0.7*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <StackPanel VerticalAlignment="Center">
+            <Button Content="upload" VerticalAlignment="Center" HorizontalAlignment="Center" Padding="10 5" Click="Button_Click"/>
+            <ProgressBar x:Name="progressBar" Height="5" Margin="0,10" Width="300"/>
+            
+        </StackPanel>
+        <TextBox  MinLines="20" x:Name="infoTextBox" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  TextWrapping="Wrap"/>
+        <StatusBar Grid.Row="2" Height="24">
+            <StatusBarItem x:Name="infoStatusBarItem"/>
+        </StatusBar>
     </Grid>
 </Window>
